added more comments and fixed strange bug for testtrain and predict word